fixed chevron spacing

--- a/css/main.css
+++ b/css/main.css
@@ -117,9 +117,9 @@ p {
 }
 
 
-.info {
-    /* height: 667px; added a height to the details */
-}
+/* .info {
+    /* height: 667px; added a height to the details 
+} */
 
 .loc {
     position: relative;
